<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
//
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/lakers"
            android:contentDescription="@string/lakers_court" />

        <LinearLayout
            android:id="@+id/center_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/restartButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_restore_24"
                android:contentDescription="@string/restartbutton" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="16dp"
                android:src="@drawable/basket_ball"
                android:contentDescription="@string/basketball" />

            <ImageButton
                android:id="@+id/resultButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_arrow_right_24"
                android:contentDescription="@string/result_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/localText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingStart="16dp"
            android:text="@string/local"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visitorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingStart="16dp"
            android:text="@string/visitante"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_above="@id/center_layout"
            android:layout_below="@+id/localText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/local_minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus1Point"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/local_score_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/localScore"
                android:textColor="@color/black"
                android:textSize="72sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/localSumarButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add1Point"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/localSumarDosButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add2Points"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_above="@id/visitorText"
            android:layout_below="@+id/center_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/visitorMinusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus1Point"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/visitorScoreText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/visitorScore"
                android:textColor="@color/black"
                android:textSize="72sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/visitorSumarButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add1Point"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/visitorSumarDosButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add2Points"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>
